@@ -7,7 +7,8 @@ Change log for zeit.web
 - FIX: (Temporarily) xfail test which never works on Jenkins
 
 - FIX: Be more defensive in several places:
-  * Bylines for content without a content-type
+  * Ignore byline for content with missing content-type
+  * Skip gallery entries with missing content-type
 
 
 2.36 (2015-12-10)
